# rust-backend-cars

./: Cargo.toml  README.md  diesel.toml  info
migrations/2024-09-17-073055_create_classic_cars/: down.sql  up.sql
src/: auth.rs  main.rs  models.rs  schema.rs
