[package]
name = "cars"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono"] }
diesel-async = { version = "0.4", features = ["postgres"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.1"

[dependencies.serde_derive]
version = "1.0"
